--- a/public/.babelrc
+++ b/public/.babelrc
@@ -1,6 +1,9 @@
 {
-  "presets": ["es2015", "react"],
-  "plugins": [
-    ["import", { "libraryName": "antd", "style": "css" }]
-  ]
+  "presets":["react", "es2015", "stage-0"]
+  // "plugins": [
+  //   "transform-runtime",
+  //   "transform-decorators-legacy",
+  //   "jsx-control-statements",
+  //   ["import", { libraryName: "antd", style: "css" }]
+  // ]
 }
