--- a/public/package.json
+++ b/public/package.json
@@ -15,16 +15,26 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.25.0",
+    "babel-eslint": "7.2.3",
     "babel-loader": "^7.1.0",
     "babel-plugin-import": "^1.2.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-runtime": "6.12.0",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "6.5.0",
+    "babel-preset-stage-1": "^6.13.0",
+    "babel-preset-stage-2": "^6.13.0",
+    "babel-preset-stage-3": "^6.11.0",
+    "babel-runtime": "^6.11.6",
     "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-loader": "^1.8.0",
     "eslint-plugin-import": "^2.6.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-jsx-control-statements": "^2.1.1",
     "eslint-plugin-react": "^7.1.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
@@ -40,7 +50,9 @@
   },
   "dependencies": {
     "antd": "^2.11.2",
+    "i18next": "^19.4.4",
     "moment": "^2.18.1",
+    "prop-types": "^15.7.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
