--- a/public/package.json
+++ b/public/package.json
@@ -18,6 +18,7 @@
     "babel-eslint": "7.2.3",
     "babel-loader": "^7.1.0",
     "babel-plugin-import": "^1.2.1",
+    "babel-plugin-jsx-control-statements": "^4.1.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-runtime": "6.12.0",
     "babel-polyfill": "^6.13.0",
@@ -34,11 +35,13 @@
     "eslint-loader": "^1.8.0",
     "eslint-plugin-import": "^2.6.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-jsx-control-statements": "^2.1.1",
+    "eslint-plugin-jsx-control-statements": "^2.2.1",
     "eslint-plugin-react": "^7.1.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
+    "jsx-control-statements": "^3.2.8",
     "less-loader": "^4.0.4",
+    "open-browser-webpack-plugin": "0.0.5",
     "redux-devtools": "^3.4.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
@@ -50,11 +53,15 @@
   },
   "dependencies": {
     "antd": "^2.11.2",
-    "i18next": "^19.4.4",
+    "i18next": "^19.4.5",
+    "lodash": "^4.17.15",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
     "moment": "^2.18.1",
     "prop-types": "^15.7.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-i18next": "^11.5.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-redux": "^4.0.8",
